--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,8 @@
 				<configuration>
 					<excludes>
 						<exclude>fonts.jar</exclude>
+						<exclude>LabelDataTemplate.xlsx</exclude>
+						<exclude>LabelTemplate.jrxml</exclude>
 					</excludes>
 					<archive>
 						<manifest>
